Se añadio la implementacion del servicio de chat junto a su hilo en la interfaz grafica y la configuracion de red de este.

--- a/FliplloServidor/Flipllo/InterfazGrafica/MainWindow.xaml
+++ b/FliplloServidor/Flipllo/InterfazGrafica/MainWindow.xaml
@@ -6,11 +6,12 @@
         xmlns:local="clr-namespace:InterfazGrafica"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="434" Closed="Window_Closed">
-    <Grid>
-        <Button x:Name="ButtonIniciarServidor" Content="Iniciar Servidor" HorizontalAlignment="Left" Margin="97,355,0,0" VerticalAlignment="Top" Width="89" Click="ButtonIniciarServidor_Click"/>
-        <Label x:Name="LabelEstadoDeServidor" Content="Default&#xA;" HorizontalAlignment="Left" Margin="190,46,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="LabelEstadoConexion" Content="Label" HorizontalAlignment="Left" Margin="81,217,0,0" VerticalAlignment="Top"/>
-        <Button x:Name="ButtonPausarServidor" Content="Pausar Servidor" HorizontalAlignment="Left" Margin="278,355,0,0" VerticalAlignment="Top" Width="91" Click="ButtonPausarServidor_Click"/>
+	<Grid>
+		<Button x:Name="ButtonIniciarServidor" Content="Iniciar Servidor" HorizontalAlignment="Left" Margin="97,355,0,0" VerticalAlignment="Top" Width="89" Click="ButtonIniciarServidor_Click"/>
+		<Label x:Name="LabelEstadoDeServidor" Content="Default&#xA;" HorizontalAlignment="Left" Margin="190,46,0,0" VerticalAlignment="Top"/>
+		<Label x:Name="LabelEstadoConexion" Content="Label" HorizontalAlignment="Left" Margin="81,217,0,0" VerticalAlignment="Top"/>
+		<Button x:Name="ButtonPausarServidor" Content="Pausar Servidor" HorizontalAlignment="Left" Margin="278,355,0,0" VerticalAlignment="Top" Width="91" Click="ButtonPausarServidor_Click"/>
+		<Button x:Name="ButtonIniciarServicioDeChat" Content="Iniciar servicio de chat" HorizontalAlignment="Left" Margin="159,310,0,0" VerticalAlignment="Top" Width="149" Click="ButtonIniciarServicioDeChat_Click"/>
 
-    </Grid>
+	</Grid>
 </Window>
