--- a/FliplloCliente/InterfazGrafica/GUIChat.xaml
+++ b/FliplloCliente/InterfazGrafica/GUIChat.xaml
@@ -1,43 +1,91 @@
-﻿<Window x:Class="InterfazGrafica.GUIChat"
+﻿<Window x:Class="InterfazGrafica.GUIMenuPrincipal"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:InterfazGrafica"
         mc:Ignorable="d"
-        Title="{DynamicResource ResourceKey=chat}" Height="450" Width="800">
-    <Grid>
-        <TextBlock x:Name="TextBlockChatBox" HorizontalAlignment="Left" Height="373" Margin="181,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="601"/>
-        <TextBox x:Name="TextBoxMessageBox" VerticalScrollBarVisibility="Visible" HorizontalAlignment="Left" Height="23" Margin="10,388,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="683">
-            <TextBox.Style>
-                <Style TargetType="TextBox" xmlns:sys="clr-namespace:System;assembly=mscorlib">
-                    <Style.Resources>
-                        <VisualBrush x:Key="CueBannerBrush" AlignmentX="Left" AlignmentY="Center" Stretch="None">
-                            <VisualBrush.Visual>
-                                <Label Content="{DynamicResource ResourceKey=mensaje}" Foreground="Gray" FontSize="14"/>
-                            </VisualBrush.Visual>
-                        </VisualBrush>
-                    </Style.Resources>
-                    <Style.Triggers>
-                        <Trigger Property="Text" Value="{x:Static sys:String.Empty}">
-                            <Setter Property="Background" Value="{StaticResource CueBannerBrush}" />
-                        </Trigger>
-                        <Trigger Property="Text" Value="{x:Null}">
-                            <Setter Property="Background" Value="{StaticResource CueBannerBrush}" />
-                        </Trigger>
-                        <Trigger Property="IsKeyboardFocused" Value="True">
-                            <Setter Property="Background" Value="White" />
-                        </Trigger>
-                    </Style.Triggers>
-                </Style>
-            </TextBox.Style>
-        </TextBox>
-        <Button x:Name="ButtonSendMessage" Content="{DynamicResource ResourceKey=enviarMensaje}" HorizontalAlignment="Left" Margin="698,388,0,0" VerticalAlignment="Top" Width="84" Height="24" Click="ButtonSendMessage_Click"/>
-        <DataGrid x:Name="DataGridUsuariosConectados" AutoGenerateColumns="False" HorizontalAlignment="Left" Height="373" Margin="10,10,0,0" VerticalAlignment="Top" Width="166">
-            <DataGrid.Columns>
-                <DataGridTextColumn Header="ID en Chat" IsReadOnly="True" Binding="{Binding Sesion.ID}"/>
-                <DataGridTextColumn Header="Usuario" IsReadOnly="True" Binding="{Binding NombreDeUsuario}"/>
-            </DataGrid.Columns>
-        </DataGrid>
-    </Grid>
+        Title="{DynamicResource ResourceKey=nombreDelJuego}" Height="718" Width="1281" ResizeMode="NoResize">
+	<Grid Margin="-2,0,2,0">
+		<Grid.Background>
+			<ImageBrush ImageSource="RecursosGráficos/background.jpg"/>
+		</Grid.Background>
+		<TextBlock x:Name="TextBlockChatBox" HorizontalAlignment="Left" Height="202" Margin="14,447,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="350" OpacityMask="#FF444444">
+			<TextBlock.Background>
+				<SolidColorBrush Color="#FFBFBFBF" Opacity="0.5"/>
+			</TextBlock.Background>
+		</TextBlock>
+		<TextBox x:Name="TextBoxMessageBox" VerticalScrollBarVisibility="Visible" HorizontalAlignment="Left" Height="24" Margin="13,653,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="266">
+			<TextBox.Style>
+				<Style TargetType="TextBox" xmlns:sys="clr-namespace:System;assembly=mscorlib">
+					<Style.Resources>
+						<VisualBrush x:Key="CueBannerBrush" AlignmentX="Left" AlignmentY="Center" Stretch="None">
+							<VisualBrush.Visual>
+								<Label Content="{DynamicResource ResourceKey=mensaje}" Foreground="Gray" FontSize="14"/>
+							</VisualBrush.Visual>
+						</VisualBrush>
+					</Style.Resources>
+					<Style.Triggers>
+						<Trigger Property="Text" Value="{x:Static sys:String.Empty}">
+							<Setter Property="Background" Value="{StaticResource CueBannerBrush}" />
+						</Trigger>
+						<Trigger Property="Text" Value="{x:Null}">
+							<Setter Property="Background" Value="{StaticResource CueBannerBrush}" />
+						</Trigger>
+						<Trigger Property="IsKeyboardFocused" Value="True">
+							<Setter Property="Background" Value="White" />
+						</Trigger>
+					</Style.Triggers>
+				</Style>
+			</TextBox.Style>
+		</TextBox>
+		<Button x:Name="ButtonSendMessage" Content="{DynamicResource ResourceKey=enviarMensaje}" HorizontalAlignment="Left" Margin="279,653,0,0" VerticalAlignment="Top" Width="84" Height="24" Click="ButtonSendMessage_Click"/>
+		<DataGrid x:Name="DataGridUsuariosConectados" AutoGenerateColumns="False" HorizontalAlignment="Left" Height="304" Margin="14,137,0,0" VerticalAlignment="Top" Width="350">
+			<DataGrid.Background>
+				<SolidColorBrush Color="#FFF0F0F0" Opacity="0.5"/>
+			</DataGrid.Background>
+			<DataGrid.Columns>
+				<DataGridTextColumn Header="ID en Chat" IsReadOnly="True" Binding="{Binding ID}"/>
+				<DataGridTextColumn Header="Usuario" IsReadOnly="True" Binding="{Binding Usuario.NombreDeUsuario}"/>
+			</DataGrid.Columns>
+		</DataGrid>
+		<ProgressBar HorizontalAlignment="Left" Height="22" Margin="69,46,0,0" VerticalAlignment="Top" Width="154" Foreground="#FF2E6DC7" Panel.ZIndex="-2"/>
+		<Label Content="LN" HorizontalAlignment="Left" Margin="14,26,0,0" VerticalAlignment="Top" FontSize="36"/>
+		<Ellipse Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="62" Margin="10,26,0,0" Stroke="Black" VerticalAlignment="Top" Width="62" Panel.ZIndex="-1"/>
+		<Label Content="{DynamicResource ResourceKey=nombreDeUsuario}" HorizontalAlignment="Left" Margin="77,15,0,0" VerticalAlignment="Top" FontSize="16"/>
+		<Rectangle HorizontalAlignment="Left" Height="204" Margin="13,446,0,0" Stroke="Black" VerticalAlignment="Top" Width="352" Panel.ZIndex="-1"/>
+		<Button  HorizontalAlignment="Left" Margin="616,513,0,0" VerticalAlignment="Top" Width="100" Height="100" Background="{x:Null}" BorderBrush="{x:Null}">
+			<Image Source="/RecursosGráficos/treasure.png">
+
+			</Image>
+		</Button>
+		<Button HorizontalAlignment="Left" Margin="1006,11,0,0" VerticalAlignment="Top" Width="75" Background="{x:Null}" BorderBrush="{x:Null}">
+			<Image Source="/RecursosGráficos/trophy.png">
+
+			</Image>
+		</Button>
+		<Button  HorizontalAlignment="Left" Margin="1100,11,0,0" VerticalAlignment="Top" Width="75" Background="{x:Null}" BorderBrush="{x:Null}">
+			<Image Source="/RecursosGráficos/exit.png">
+
+			</Image>
+		</Button>
+		<Button  HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="1186,11,0,0" Background="{x:Null}" BorderBrush="{x:Null}">
+			<Image Source="/RecursosGráficos/settings.png">
+
+			</Image>
+		</Button>
+		<Button HorizontalAlignment="Left" Margin="1100,595,0,0" VerticalAlignment="Top" Width="75" Height="75" Background="{x:Null}" BorderBrush="{x:Null}">
+			<Image Source="/RecursosGráficos/telegram.png">
+
+			</Image>
+		</Button>
+		<Button  HorizontalAlignment="Left" Margin="1186,595,0,0" VerticalAlignment="Top" Width="75" Height="75" Background="{x:Null}" BorderBrush="{x:Null}">
+			<Image Source="/RecursosGráficos/github.png">
+
+			</Image>
+		</Button>
+		<Button HorizontalAlignment="Left" Margin="567,227,0,0" VerticalAlignment="Top" Width="200" Height="200" Background="{x:Null}" BorderBrush="{x:Null}">
+			<Image Source="/RecursosGráficos/play.png"/>
+		</Button>
+	</Grid>
 </Window>
