--- a/FliplloServidor/Flipllo/InterfazGrafica/MainWindow.xaml
+++ b/FliplloServidor/Flipllo/InterfazGrafica/MainWindow.xaml
@@ -5,19 +5,33 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:InterfazGrafica"
         mc:Ignorable="d"
-        Title="Servidor de Flipllo" Height="450" Width="684.515" Closed="Window_Closed" ResizeMode="NoResize">
+        Title="Servidor de Flipllo" Height="474.58" Width="738.402" Closed="Window_Closed" ResizeMode="NoResize" Icon="Imagenes/server.ico">
     <Grid>
-        <Button x:Name="ButtonIniciarServidor" Content="Iniciar Servidor" HorizontalAlignment="Left" Margin="97,355,0,0" VerticalAlignment="Top" Width="89" Click="ButtonIniciarServidor_Click"/>
-        <Label x:Name="LabelEstadoDeServidor" Content="" HorizontalAlignment="Left" Margin="190,46,0,0" VerticalAlignment="Top"/>
-        <Button x:Name="ButtonPausarServidor" Content="Pausar Servidor" HorizontalAlignment="Left" Margin="278,355,0,0" VerticalAlignment="Top" Width="91" Click="ButtonPausarServidor_Click"/>
-        <DataGrid x:Name="DataGridUsuariosConectados" AutoGenerateColumns="False" HorizontalAlignment="Left" Height="256" Margin="447,46,0,0" VerticalAlignment="Top" Width="220">
+        <Grid.Background>
+            <ImageBrush ImageSource="Imagenes/greyd.jpg" Opacity="0.305"/>
+        </Grid.Background>
+        <Button x:Name="ButtonIniciarServidor" Content="Iniciar Servidor" HorizontalAlignment="Left" Margin="32,308,0,0" VerticalAlignment="Top" Width="89" Click="ButtonIniciarServidor_Click"/>
+        <Label x:Name="LabelEstadoDeServidor" Content="" HorizontalAlignment="Left" Margin="10,46,0,0" VerticalAlignment="Top" Width="609" Height="72"/>
+        <Button x:Name="ButtonPausarServidor" Content="Pausar Servidor" HorizontalAlignment="Left" Margin="32,342,0,0" VerticalAlignment="Top" Width="91" Click="ButtonPausarServidor_Click"/>
+        <DataGrid x:Name="DataGridUsuariosConectados" AutoGenerateColumns="False" HorizontalAlignment="Left" Height="256" Margin="449,150,0,0" VerticalAlignment="Top" Width="273">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="ID Sesion" IsReadOnly="True" Binding="{Binding Sesion.ID}"/>
-                <DataGridTextColumn Header="Nombre de usuario" IsReadOnly="True" Binding="{Binding Sesion.Usuario.NombreDeUsuario}"/>
+                <DataGridTextColumn Header="ID Sesion" IsReadOnly="True" Binding="{Binding ID}"/>
+                <DataGridTextColumn Header="Nombre de usuario" IsReadOnly="True" Binding="{Binding Usuario.NombreDeUsuario}"/>
             </DataGrid.Columns>
 
         </DataGrid>
-        <Label x:Name="LabelUsuariosConectados" Content="Usuarios Conectados" HorizontalAlignment="Left" Margin="507,20,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="LabelUsuariosConectados" Content="Usuarios Conectados" HorizontalAlignment="Left" Margin="498,124,0,0" VerticalAlignment="Top"/>
+        <DataGrid x:Name="DataGridSalasConectadas" AutoGenerateColumns="False" HorizontalAlignment="Left" Height="256" Margin="160,150,0,0" VerticalAlignment="Top" Width="284">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="ID Sala" IsReadOnly="True" Binding="{Binding ID}"/>
+                <DataGridTextColumn Header="ID SesionCreadora" IsReadOnly="True" Binding="{Binding IDSesionCreadora}"/>
+                <DataGridTextColumn Header="Nombre" IsReadOnly="True" Binding="{Binding Nombre}"/>
+                <DataGridTextColumn Header="#Jugadores" IsReadOnly="True" Binding="{Binding Jugadores.Count}"/>
+            </DataGrid.Columns>
+
+        </DataGrid>
+        <Button x:Name="ButtonLimpiarSalas" Content="Limpiar Salas" HorizontalAlignment="Left" Margin="232,411,0,0" VerticalAlignment="Top" Width="75" Click="ButtonLimpiarSalas_Click"/>
+        <Button x:Name="ButtonLimpiarSesiones" Content="Limpiar Sesiones" HorizontalAlignment="Left" Margin="535,411,0,0" VerticalAlignment="Top" Width="92" Click="ButtonLimpiarSesiones_Click"/>
 
     </Grid>
 </Window>
