--- a/FliplloCliente/InterfazGrafica/GUIChat.xaml
+++ b/FliplloCliente/InterfazGrafica/GUIChat.xaml
@@ -5,17 +5,18 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:InterfazGrafica"
         mc:Ignorable="d"
-        Title="{DynamicResource ResourceKey=nombreDelJuego}" Height="718" Width="1281" ResizeMode="NoResize">
-	<Grid Margin="-2,0,2,0">
+        Title="{DynamicResource ResourceKey=nombreDelJuego}" Height="718" Width="1281" ResizeMode="NoResize" Closed="Window_Closed" Icon="RecursosGráficos/Icon.ico" WindowStartupLocation="CenterScreen">
+	<Grid Margin="0,0,0,0">
 		<Grid.Background>
 			<ImageBrush ImageSource="RecursosGráficos/background.jpg"/>
 		</Grid.Background>
-		<TextBlock x:Name="TextBlockChatBox" HorizontalAlignment="Left" Height="202" Margin="14,447,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="350" OpacityMask="#FF444444">
+		<local:ContadorDeNivel x:Name="ContadorDeNivel" Margin="15,12,1045,603"></local:ContadorDeNivel>
+		<TextBlock x:Name="TextBlockChat" HorizontalAlignment="Left" Height="202" Margin="14,447,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="350" OpacityMask="#FF444444">
 			<TextBlock.Background>
 				<SolidColorBrush Color="#FFBFBFBF" Opacity="0.5"/>
 			</TextBlock.Background>
 		</TextBlock>
-		<TextBox x:Name="TextBoxMessageBox" VerticalScrollBarVisibility="Visible" HorizontalAlignment="Left" Height="24" Margin="13,653,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="266">
+		<TextBox x:Name="TextBoxMensaje" VerticalScrollBarVisibility="Visible" HorizontalAlignment="Left" Height="24" Margin="13,653,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="266">
 			<TextBox.Style>
 				<Style TargetType="TextBox" xmlns:sys="clr-namespace:System;assembly=mscorlib">
 					<Style.Resources>
@@ -39,8 +40,8 @@
 				</Style>
 			</TextBox.Style>
 		</TextBox>
-		<Button x:Name="ButtonSendMessage" Content="{DynamicResource ResourceKey=enviarMensaje}" HorizontalAlignment="Left" Margin="279,653,0,0" VerticalAlignment="Top" Width="84" Height="24" Click="ButtonSendMessage_Click"/>
-		<DataGrid x:Name="DataGridUsuariosConectados" AutoGenerateColumns="False" HorizontalAlignment="Left" Height="304" Margin="14,137,0,0" VerticalAlignment="Top" Width="350">
+		<Button x:Name="ButtonEnviarMensaje" Content="{DynamicResource ResourceKey=enviarMensaje}" HorizontalAlignment="Left" Margin="279,653,0,0" VerticalAlignment="Top" Width="84" Height="24" Click="ButtonSendMessage_Click"/>
+		<DataGrid x:Name="DataGridUsuariosConectados" AutoGenerateColumns="False" HorizontalAlignment="Left" Height="304" Margin="15,137,0,0" VerticalAlignment="Top" Width="350">
 			<DataGrid.Background>
 				<SolidColorBrush Color="#FFF0F0F0" Opacity="0.5"/>
 			</DataGrid.Background>
@@ -49,42 +50,28 @@
 				<DataGridTextColumn Header="Usuario" IsReadOnly="True" Binding="{Binding Usuario.NombreDeUsuario}"/>
 			</DataGrid.Columns>
 		</DataGrid>
-		<ProgressBar HorizontalAlignment="Left" Height="22" Margin="69,46,0,0" VerticalAlignment="Top" Width="154" Foreground="#FF2E6DC7" Panel.ZIndex="-2"/>
-		<Label Content="LN" HorizontalAlignment="Left" Margin="14,26,0,0" VerticalAlignment="Top" FontSize="36"/>
-		<Ellipse Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="62" Margin="10,26,0,0" Stroke="Black" VerticalAlignment="Top" Width="62" Panel.ZIndex="-1"/>
-		<Label Content="{DynamicResource ResourceKey=nombreDeUsuario}" HorizontalAlignment="Left" Margin="77,15,0,0" VerticalAlignment="Top" FontSize="16"/>
 		<Rectangle HorizontalAlignment="Left" Height="204" Margin="13,446,0,0" Stroke="Black" VerticalAlignment="Top" Width="352" Panel.ZIndex="-1"/>
-		<Button  HorizontalAlignment="Left" Margin="616,513,0,0" VerticalAlignment="Top" Width="100" Height="100" Background="{x:Null}" BorderBrush="{x:Null}">
+		<Button x:Name="ButtonBotin"  HorizontalAlignment="Left" Margin="616,513,0,0" VerticalAlignment="Top" Width="100" Height="100" Background="{x:Null}" BorderBrush="{x:Null}" Click="ButtonBotin_Click">
 			<Image Source="/RecursosGráficos/treasure.png">
 
 			</Image>
 		</Button>
-		<Button HorizontalAlignment="Left" Margin="1006,11,0,0" VerticalAlignment="Top" Width="75" Background="{x:Null}" BorderBrush="{x:Null}">
-			<Image Source="/RecursosGráficos/trophy.png">
-
-			</Image>
+		<Button x:Name="ButtonTablaDePuntuaciones" HorizontalAlignment="Left" Margin="1006,11,0,0" VerticalAlignment="Top" Width="75" Background="{x:Null}" BorderBrush="{x:Null}">
+			<Image Source="/RecursosGráficos/trophy.png"/>
 		</Button>
-		<Button  HorizontalAlignment="Left" Margin="1100,11,0,0" VerticalAlignment="Top" Width="75" Background="{x:Null}" BorderBrush="{x:Null}">
-			<Image Source="/RecursosGráficos/exit.png">
-
-			</Image>
+		<Button x:Name="ButtonSalir"  HorizontalAlignment="Left" Margin="1100,11,0,0" VerticalAlignment="Top" Width="75" Background="{x:Null}" BorderBrush="{x:Null}" Click="ButtonSalir_Click">
+			<Image Source="/RecursosGráficos/exit.png"/>
 		</Button>
-		<Button  HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="1186,11,0,0" Background="{x:Null}" BorderBrush="{x:Null}">
-			<Image Source="/RecursosGráficos/settings.png">
-
-			</Image>
+		<Button x:Name="ButtonConfiguracion"  HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="1186,11,0,0" Background="{x:Null}" BorderBrush="{x:Null}">
+			<Image Source="/RecursosGráficos/settings.png"/>
 		</Button>
-		<Button HorizontalAlignment="Left" Margin="1100,595,0,0" VerticalAlignment="Top" Width="75" Height="75" Background="{x:Null}" BorderBrush="{x:Null}">
-			<Image Source="/RecursosGráficos/telegram.png">
-
-			</Image>
+		<Button x:Name="ButtonContactanos" HorizontalAlignment="Left" Margin="1100,595,0,0" VerticalAlignment="Top" Width="75" Height="75" Background="{x:Null}" BorderBrush="{x:Null}" Click="ButtonContactanos_Click">
+			<Image Source="/RecursosGráficos/telegram.png"/>
 		</Button>
-		<Button  HorizontalAlignment="Left" Margin="1186,595,0,0" VerticalAlignment="Top" Width="75" Height="75" Background="{x:Null}" BorderBrush="{x:Null}">
-			<Image Source="/RecursosGráficos/github.png">
-
-			</Image>
+		<Button x:Name="ButtoGitHub"  HorizontalAlignment="Left" Margin="1186,595,0,0" VerticalAlignment="Top" Width="75" Height="75" Background="{x:Null}" BorderBrush="{x:Null}" Click="ButtoGitHub_Click">
+			<Image Source="/RecursosGráficos/github.png"/>
 		</Button>
-		<Button HorizontalAlignment="Left" Margin="567,227,0,0" VerticalAlignment="Top" Width="200" Height="200" Background="{x:Null}" BorderBrush="{x:Null}">
+		<Button x:Name="ButtonJugar" HorizontalAlignment="Left" Margin="567,227,0,0" VerticalAlignment="Top" Width="200" Height="200" Background="{x:Null}" BorderBrush="{x:Null}" Click="ButtonJugar_Click">
 			<Image Source="/RecursosGráficos/play.png"/>
 		</Button>
 	</Grid>
